# stapel-tools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  catalog.json  catalog.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  publish.yml
scripts/: check_nav_manifest_sync.py  e2e_live_circle.py
stapel_tools/: _agents_template.py  _compose_templates.py  _deploy_templates.py  _dev_env_templates.py  _docgen_scan.py  _frontend_templates.py  _harness_templates.py  _library_templates.py  _local_env_templates.py  _minimal_templates.py  _module_config.py  _precommit_templates.py  _react_templates.py  _templates.py  _url_mounts.py  adoption_lint.py  analytics_report.py  api_docs.py  assemble_scaffold.py  capabilities.py  catalog.py  codegen.py  config_lint.py  config_manifest.py  create_project.py  doc_lint.py  gen_client.py  i18n_seed.py  lint.py  migration_lint.py  new_library.py  new_module.py  new_react_lib.py  new_service.py  release.py  remove_service.py  reserved_paths.py  swap_lint.py  url_lint.py  verify.py
tests/: test_adoption_lint.py  test_analytics_report.py  test_api_docs.py  test_assemble_scaffold.py  test_capabilities.py  test_catalog.py  test_catalog_index.py  test_codegen.py  test_config_lint.py  test_config_manifest_regen.py  test_create_project.py  test_deploy_gate.py  test_dev_env_presets.py  test_doc_lint.py  test_docgen_scan.py  test_frontend_scaffold.py  test_gen_client.py  test_i18n_seed.py  test_lint_i18n_links.py  test_local_env_presets.py  test_migration_lint.py  test_new_library.py  test_new_react_lib.py  test_precommit_new_hooks.py  test_presenter_canon.py  test_registry_onboarding.py  test_release_manifest.py  test_reserved_paths_regen.py  test_security_hardening.py  test_swap_lint.py  test_url_lint.py  test_verify.py
tests/fixtures/analytics_ws/: backend-flows.json  package.json
tests/fixtures/catalog/: recipes.yaml
tests/fixtures/catalog/mod-absent/docs/: .keep
tests/fixtures/catalog/mod-broken/docs/: capabilities.json
tests/fixtures/catalog/mod-full/: CONFIG.MD
tests/fixtures/catalog/mod-full/docs/: capabilities.json  errors.json  flows.json
tests/fixtures/catalog/mod-minimal/docs/: capabilities.json
tests/fixtures/docgen/: errors.json  flows.json  schema.json
tests/fixtures/docgen/translations/: errors.ru.json  flows.ru.json
